# logic-repl

./: dune-project  logic-repl.opam
lib/: ast.ml  dune  evaluate.ml  lexer.ml  parser.ml  token.ml
test/: dune  test_evaluate.ml  test_lexer.ml
